# HPCA_nn_project

./: CMakeLists.txt  LICENSE  README.md  actf_type_cuda.h  backward_cuda.cu  backward_cuda.h  cuda_matmul.cu  cuda_matmul.h  dataset_loader.cpp  dataset_loader.h  device_type.h  forward_cuda.cu  forward_cuda.h  linear_layer.cpp  linear_layer.h  main.cpp  neural_network.cpp  neural_network.h  neuron.cpp  neuron.h  parallel_impl_cpu.h  parameters.cpp  parameters.h  times_printing.cpp  times_printing.h
dataset/: test.data
